--- a/b-fit/tsconfig.json
+++ b/b-fit/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/ui/HomeNavigation.js", "app/ui/Home/HomeHeader.js"],
   "exclude": ["node_modules"]
 }
