--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@types/bcrypt": "^5.0.2",
+    "@vercel/postgres": "^0.8.0",
+    "bcrypt": "^5.1.1",
     "next": "14.1.1",
+    "next-auth": "^5.0.0-beta.17",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/node": "^20",
