--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -22,6 +22,7 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
