--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -15,7 +15,6 @@
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "aws-sdk": "^2.1608.0",
-    "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "mock-aws-s3": "^4.0.2",
     "next": "^14.0.2",
@@ -32,9 +31,11 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
     "@vercel/style-guide": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
