--- a/b-fit/.env
+++ b/b-fit/.env
@@ -1,1 +1,9 @@
-AUTH_SECRET=6HokzrI9j5IsTS1PnHhANjJbCRcWTNYXBrG9CJaSnB8=
+AUTH_SECRET="6HokzrI9j5IsTS1PnHhANjJbCRcWTNYXBrG9CJaSnB8="
+POSTGRES_URL="postgres://default:pVfN7e2JXZvy@ep-plain-cherry-a46os0ie-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:pVfN7e2JXZvy@ep-plain-cherry-a46os0ie-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:pVfN7e2JXZvy@ep-plain-cherry-a46os0ie-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:pVfN7e2JXZvy@ep-plain-cherry-a46os0ie.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-plain-cherry-a46os0ie-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="pVfN7e2JXZvy"
+POSTGRES_DATABASE="verceldb"
