--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -35,6 +35,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
+    "@types/uuid": "^9.0.8",
     "@vercel/style-guide": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
