--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -12,6 +12,7 @@
     "@fontsource/ubuntu": "^5.1.0",
     "@graywolfai/react-heroicons": "^2.0.1",
     "@next/font": "^14.2.15",
+    "@prisma/client": "^6.2.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
@@ -22,7 +23,9 @@
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.11",
     "nock": "^13.5.4",
+    "pg": "^8.13.1",
     "postcss": "8.4.31",
+    "prisma": "^6.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.1.0",
