--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "refreshPrismaDB": "prisma migrate dev"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@fontsource/ubuntu": "^5.1.0",
     "@graywolfai/react-heroicons": "^2.0.1",
     "@next/font": "^14.2.15",
-    "@prisma/client": "^6.2.0",
+    "@prisma/client": "^6.2.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
@@ -25,7 +27,6 @@
     "nock": "^13.5.4",
     "pg": "^8.13.1",
     "postcss": "8.4.31",
-    "prisma": "^6.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.1.0",
@@ -48,6 +49,7 @@
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "9.0.0",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.4"
+    "prettier-plugin-tailwindcss": "0.5.4",
+    "prisma": "^6.2.1"
   }
 }
