--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@fontsource/ubuntu": "^5.1.0",
     "@graywolfai/react-heroicons": "^2.0.1",
+    "@heroicons/react": "^2.2.0",
     "@next/font": "^14.2.15",
+    "@prisma/client": "^6.2.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
@@ -23,6 +26,7 @@
     "next-auth": "^5.0.0-beta.11",
     "nock": "^13.5.4",
     "postcss": "8.4.31",
+    "prisma": "^6.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.1.0",
