--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -20,7 +20,9 @@
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "aws-sdk": "^2.1608.0",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.471.0",
     "mock-aws-s3": "^4.0.2",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.11",
@@ -30,7 +32,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.1.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
