--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -13,8 +13,11 @@
     "@fontsource/ubuntu": "^5.1.0",
     "@graywolfai/react-heroicons": "^2.0.1",
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.10.0",
     "@next/font": "^14.2.15",
     "@prisma/client": "^6.2.1",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
@@ -31,14 +34,15 @@
     "prisma": "^6.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.1.0",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
-    "zod": "^3.22.2"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
