--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@next/font": "^14.2.15",
     "@prisma/client": "^6.2.1",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/forms": "^0.5.7",
