--- a/b-fit/.env
+++ b/b-fit/.env
@@ -7,6 +7,8 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-plain-cherry-a46os0ie-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="pVfN7e2JXZvy"
 POSTGRES_DATABASE="verceldb"
+GOOGLE_ID=798677183510-u5h37c85jl2h5791anhrm0peh5j0mjt8.apps.googleusercontent.com
+GOOGLE_SECRET=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
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
