--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -37,6 +37,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-spinners": "^0.15.0",
+    "resend": "^4.1.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
