--- a/b-fit/.env
+++ b/b-fit/.env
@@ -9,6 +9,7 @@ POSTGRES_PASSWORD="pVfN7e2JXZvy"
 POSTGRES_DATABASE="verceldb"
 GOOGLE_ID=798677183510-u5h37c85jl2h5791anhrm0peh5j0mjt8.apps.googleusercontent.com
 GOOGLE_SECRET=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
+RESEND_API_KEY=re_VLJXpSWY_UmVvsez1QtoA3nwvK6fJnxha
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
