--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
@@ -31,6 +32,7 @@
     "mock-aws-s3": "^4.0.2",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.11",
+    "next-themes": "^0.4.4",
     "nock": "^13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
