Dashboard items start

--- a/b-fit/tsconfig.json
+++ b/b-fit/tsconfig.json
@@ -27,7 +27,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/ui/HomeNavigation.js",
-    "app/ui/Home/HomeHeader.js"
+    "components/home/HomeHeader.js"
   ],
   "exclude": ["node_modules"]
 }
