--- a/b-fit/.env
+++ b/b-fit/.env
@@ -19,3 +19,5 @@ RESEND_API_KEY=re_VLJXpSWY_UmVvsez1QtoA3nwvK6fJnxha
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
