--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -31,7 +31,6 @@
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "aws-sdk": "^2.1608.0",
-    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.471.2",
@@ -56,13 +55,12 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.1",
     "@types/bcryptjs": "^2.4.6",
-    "@types/react": "18.2.21",
+    "@types/react": "^19.0.10",
     "@types/react-dom": "18.2.14",
     "@types/uuid": "^9.0.8",
     "@vercel/style-guide": "^5.0.1",
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
