--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -18,7 +18,8 @@
     "@next/font": "^14.2.15",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
@@ -52,6 +53,7 @@
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
+    "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
