--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -39,7 +39,7 @@
     "mock-aws-s3": "^4.0.2",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.11",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "nock": "^13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -48,6 +48,7 @@
     "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0",
     "resend": "^4.1.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
