--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -59,6 +59,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.51.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/react": "^19.0.10",
     "@types/react-dom": "18.2.14",
