--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@fontsource/ubuntu": "^5.1.0",
@@ -30,7 +33,10 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "20.5.7",
+    "@tanstack/query-sync-storage-persister": "^5.71.0",
+    "@tanstack/react-query": "^5.71.0",
+    "@tanstack/react-query-devtools": "^5.71.0",
+    "@tanstack/react-query-persist-client": "^5.71.0",
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "aws-sdk": "^2.1608.0",
@@ -53,7 +59,6 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "vaul": "^1.1.2",
@@ -61,7 +66,9 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.51.0",
+    "@tanstack/eslint-plugin-query": "^5.68.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^22.13.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "18.2.14",
     "@types/uuid": "^9.0.8",
@@ -73,6 +80,9 @@
     "eslint-config-prettier": "9.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4",
-    "prisma": "^6.2.1"
+    "prisma": "^6.2.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2"
   }
 }
