Prefetch workouts for user fixed

--- a/b-fit/.env
+++ b/b-fit/.env
@@ -12,4 +12,4 @@ GOOGLE_SECRET=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
 RESEND_API_KEY=re_VLJXpSWY_UmVvsez1QtoA3nwvK6fJnxha
 
 
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
+NEXT_PUBLIC_APP_URL=http://localhost:3000
