--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/query-sync-storage-persister": "^5.71.0",
     "@tanstack/react-query": "^5.71.0",
     "@tanstack/react-query-devtools": "^5.71.0",
