--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -14,6 +14,10 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@fontsource/ubuntu": "^5.1.0",
     "@graywolfai/react-heroicons": "^2.0.1",
     "@heroicons/react": "^2.2.0",
