--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -51,6 +51,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.471.2",
     "mock-aws-s3": "^4.0.2",
+    "moment": "^2.30.1",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.11",
     "next-themes": "^0.4.6",
