Persister and improved cache

--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -41,7 +41,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/query-sync-storage-persister": "^5.71.0",
     "@tanstack/react-query": "^5.71.0",
-    "@tanstack/react-query-devtools": "^5.71.0",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/react-query-persist-client": "^5.71.0",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.15",
@@ -49,6 +49,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "idb-keyval": "^6.2.2",
     "lucide-react": "^0.471.2",
     "mock-aws-s3": "^4.0.2",
     "moment": "^2.30.1",
