Sessions Calendar with highlighted days of workout completions

--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -49,6 +49,7 @@
     "aws-sdk": "^2.1608.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "idb-keyval": "^6.2.2",
     "lucide-react": "^0.471.2",
@@ -60,6 +61,7 @@
     "nock": "^13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
