--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -55,14 +55,14 @@
     "lucide-react": "^0.471.2",
     "mock-aws-s3": "^4.0.2",
     "moment": "^2.30.1",
-    "next": "^14.0.2",
+    "next": "15.5.3",
     "next-auth": "^5.0.0-beta.11",
     "next-themes": "^0.4.6",
     "nock": "^13.5.4",
     "postcss": "8.4.31",
-    "react": "18.2.0",
+    "react": "19.1.1",
     "react-day-picker": "^9.9.0",
-    "react-dom": "18.2.0",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
@@ -82,14 +82,14 @@
     "@tanstack/eslint-plugin-query": "^5.68.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.13.14",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9",
     "@types/uuid": "^9.0.8",
     "@vercel/style-guide": "^5.0.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint-config-next": "15.5.3",
     "eslint-config-prettier": "9.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4",
@@ -97,5 +97,9 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
+  },
+  "overrides": {
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9"
   }
 }
