--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@reduxjs/toolkit": "^2.8.2",
+    "@serwist/next": "^9.2.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/query-sync-storage-persister": "^5.71.0",
