--- a/b-fit/.env
+++ b/b-fit/.env
@@ -11,5 +11,5 @@ GOOGLE_ID=798677183510-u5h37c85jl2h5791anhrm0peh5j0mjt8.apps.googleusercontent.c
 GOOGLE_SECRET=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
 RESEND_API_KEY=re_VLJXpSWY_UmVvsez1QtoA3nwvK6fJnxha
 
-
+NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_APP_URL=http://localhost:3000
