--- a/b-fit/package.json
+++ b/b-fit/package.json
@@ -2,12 +2,14 @@
   "name": "b-fit",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prebuild": "node scripts/prebuild.js"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -60,6 +62,7 @@
     "next-themes": "^0.4.6",
     "nock": "^13.5.4",
     "postcss": "8.4.31",
+    "prompts": "^2.4.2",
     "react": "19.1.1",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.1",
